updated the XButton